// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should have rendered custom categories properly 1`] = `
<div
  className="page-container"
>
  <HeaderSub />
  <withRouter(Connect(Jumbotron)) />
  <div>
    <div
      className="popular-last-filterbar__container"
    >
      <div
        className="content-container"
      >
        <Connect(PopularLasttFilter)
          relative={true}
        />
      </div>
    </div>
    <Connect(PublicPostsList)
      category="all"
      grid="grid-home-first"
      range={17}
    />
  </div>
  <Connect(PublicPostsList)
    category="alpha"
    grid="grid-home-second"
    key="alpha"
    range={8}
  />
  <Connect(PublicPostsList)
    category="beta"
    grid="grid-home-first"
    key="beta"
    range={8}
  />
  <Connect(PublicPostsList)
    category="gamma"
    grid="grid-home-first"
    key="gamma"
    range={8}
  />
</div>
`;

exports[`should render HomeRead component properly 1`] = `
<div
  className="page-container"
>
  <HeaderSub />
  <withRouter(Connect(Jumbotron)) />
  <div>
    <div
      className="popular-last-filterbar__container"
    >
      <div
        className="content-container"
      >
        <Connect(PopularLasttFilter)
          relative={true}
        />
      </div>
    </div>
    <Connect(PublicPostsList)
      category="all"
      grid="grid-home-first"
      range={17}
    />
  </div>
</div>
`;
